fix (#2297): Fix hidden hamburger menu on mobile

--- a/themes/vue/source/css/_header.styl
+++ b/themes/vue/source/css/_header.styl
@@ -121,7 +121,7 @@ body.docs
   width: 100%
   height: 40px
   background-color: #fff
-  z-index: 9
+  z-index: 11
   display: none
   box-shadow: 0 0 2px rgba(0,0,0,.25)
   .menu-button
